--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource/abeezee": "^4.5.10",
+    "axios": "^1.2.3",
     "bootstrap": "^5.3.0-alpha1",
     "vue": "^3.2.45"
   },
